# darwin-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html  run_examples.sh
benchmark/bench1/: run_simulation.sh
benchmark/bench1/src/: main.rs
doc/: search-index.js
doc/advapi32/: index.html
doc/crossbeam/: fn.scope.html  fn.spawn_unsafe.html  struct.Scope.html  struct.ScopedJoinHandle.html
doc/crossbeam/mem/: struct.CachePadded.html  trait.ZerosValid.html
doc/crossbeam/sync/: index.html  struct.ArcCell.html  struct.AtomicOption.html  struct.MsQueue.html  struct.SegQueue.html  struct.TreiberStack.html
doc/darwin_rs/: enum.BuilderResult.html  enum.Error.html  enum.SimulationType.html  index.html  sidebar-items.js  struct.IndividualWrapper.html  struct.Simulation.html  struct.SimulationBuilder.html  trait.Individual.html  type.Result.html
doc/darwin_rs/individual/: index.html  sidebar-items.js  struct.IndividualWrapper.html  trait.Individual.html
doc/darwin_rs/population/: index.html  sidebar-items.js  struct.Population.html
doc/darwin_rs/population_builder/: enum.PopError.html  index.html  sidebar-items.js  struct.PopulationBuilder.html  type.Result.html
doc/darwin_rs/simulation/: enum.SimulationType.html  index.html  sidebar-items.js  struct.Simulation.html  struct.SimulationResult.html
doc/darwin_rs/simulation_builder/: enum.SimError.html  index.html  sidebar-items.js  struct.SimulationBuilder.html  type.Result.html
doc/jobsteal/: fn.make_pool.html  index.html  sidebar-items.js  struct.Pool.html  struct.Spawner.html
doc/jobsteal/iter/: index.html  sidebar-items.js  struct.Cloned.html  struct.CostMul.html  struct.Enumerate.html  struct.Filter.html  struct.FlatMap.html  struct.Hide.html  (+15 more)
doc/libc/: constant.ADFS_SUPER_MAGIC.html  constant.AFFS_SUPER_MAGIC.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_NETLINK.html  constant.AF_PACKET.html  constant.AF_UNIX.html  constant.BRKINT.html  constant.BS0.html  constant.BS1.html  constant.BUFSIZ.html  constant.CBAUD.html  constant.CLOCAL.html  constant.CLOCK_MONOTONIC.html  constant.CLOCK_REALTIME.html  constant.CLONE_CHILD_CLEARTID.html  constant.CLONE_CHILD_SETTID.html  constant.CLONE_DETACHED.html  constant.CLONE_FILES.html  constant.CLONE_FS.html  constant.CLONE_IO.html  constant.CLONE_NEWIPC.html  constant.CLONE_NEWNET.html  constant.CLONE_NEWNS.html  constant.CLONE_NEWPID.html  constant.CLONE_NEWUSER.html  constant.CLONE_NEWUTS.html  constant.CLONE_PARENT.html  constant.CLONE_PARENT_SETTID.html  constant.CLONE_PTRACE.html  constant.CLONE_SETTLS.html  constant.CLONE_SIGHAND.html  constant.CLONE_SYSVSEM.html  constant.CLONE_THREAD.html  constant.CLONE_UNTRACED.html  constant.CLONE_VFORK.html  constant.CLONE_VM.html  constant.CODA_SUPER_MAGIC.html  constant.CPU_SETSIZE.html  constant.CR0.html  (+1273 more)
doc/rand/: struct.AsciiGenerator.html  struct.Generator.html
doc/time/: enum.ParseError.html  fn.at.html  fn.at_utc.html  fn.empty_tm.html  fn.get_time.html  fn.now.html  fn.now_utc.html  fn.precise_time_ns.html  fn.precise_time_s.html  fn.strftime.html  fn.strptime.html  fn.tzset.html  index.html  struct.Duration.html  struct.PreciseTime.html  struct.SteadyTime.html  struct.Timespec.html  struct.Tm.html  struct.TmFmt.html
doc/winapi/: index.html
examples/ocr/: .gitignore  Cargo.toml
examples/ocr1/: Cargo.toml  run_simulation.sh
examples/ocr1/src/: main.rs
examples/ocr2/: Cargo.toml
examples/queens/: Cargo.toml  run_simulation.sh
examples/queens/src/: main.rs
examples/sudoku/: Cargo.toml  run_simulation.sh
examples/tsp/: Cargo.toml
examples/tsp1/: Cargo.toml  run_simulation.sh
examples/tsp2/: Cargo.toml  run_simulation.sh
examples/tsp2/src/: main.rs
examples/tsp3/: Cargo.toml  dk11455.tsp  reset.sh  run_simulation.sh  run_simulation1.sh  run_simulation2.sh  run_simulation3.sh  run_simulation4.sh
examples/tsp3/src/: main.rs
src/: dw_config.rs  dw_error.rs  dw_individual.rs  dw_node.rs  dw_population.rs  dw_server.rs  dw_simulation_node.rs  dw_simulation_server.rs  individual.rs  lib.rs  population.rs  population_builder.rs  simulation.rs  simulation_builder.rs  simulation_node.rs  simulation_server.rs
(+122 files in other folders)
