[package]
name = "darwin-rs"
version = "0.3.0"
authors = ["Willi Kappler, grandor@gmx.de"]
license = "MIT"
description = "Evolutionary algorithms library written in Rust."
readme = "README.md"
repository = "https://github.com/willi-kappler/darwin-rs"
exclude = ["*.png", "example", "target"]
keywords = ["evolutionary", "algorithm", "EA", "darwin", "evolution", "genetic"]
documentation = "https://docs.rs/darwin-rs/0.3.0/darwin_rs/"

[dependencies]
jobsteal = "0.5.1"
quick-error = "1.1.0"
log = "0.3"
# clippy = "*"

[profile.release]
lto = true
