[package]
name = "darwin-rs"
version = "0.4.0"
authors = ["Willi Kappler <grandor@gmx.de>"]
license = "MIT"
description = "Evolutionary algorithms library written in Rust."
readme = "README.md"
repository = "https://github.com/willi-kappler/darwin-rs"
exclude = ["*.png", "example", "target"]
keywords = ["evolutionary", "algorithm", "EA", "evolution", "genetic"]
documentation = "https://docs.rs/darwin-rs/0.4.0/darwin_rs/"
categories = ["algorithms", "science"]

[badges]
travis-ci = {repository = "https://travis-ci.org/willi-kappler/darwin-rs"}

[dependencies]
jobsteal = "0.5.1"
error-chain = "0.10"
log = "0.3"
# clippy = "*"

[profile.release]
lto = true
