[package]
authors = ["Willi Kappler <grandor@gmx.de>"]
categories = ["algorithms", "science"]
description = "Evolutionary algorithms library written in Rust."
documentation = "https://docs.rs/darwin-rs/"
edition = "2018"
exclude = ["*.png", "examples", "target", "benchmark"]
keywords = ["evolutionary", "algorithm", "EA", "evolution", "genetic"]
license = "MIT"
name = "darwin-rs"
repository = "https://github.com/willi-kappler/darwin-rs"
version = "0.5.0"

[badges]
travis-ci = {repository = "https://travis-ci.org/willi-kappler/darwin-rs"}

[dependencies]
log = "0.4"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
node_crunch = {git = "https://github.com/willi-kappler/node_crunch"}
rand = "0.8"

[profile.release]
lto = true
