[package]
name = "queens"
version = "0.1.0"
authors = ["Willi Kappler grandor@gmx.de"]
edition = "2018"
description = "Queens example for darwin-rs"
license = "MIT"

[dependencies]
log = "0.4"
simplelog = "0.10"
structopt = "0.3"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
darwin-rs = {path = "../../../darwin-rs"}

[profile.release]
lto = true
