[package]
name = "tsp2"
version = "0.1.0"
authors = ["Willi Kappler grandor@gmx.de"]
edition = "2018"
description = "TSP2 example for darwin-rs"
license = "MIT"

[dependencies]
log = "0.4"
simplelog = "0.10.0"
structopt = "0.3"
serde = { version = "1", features = ["derive"] }
nanorand = "0.6.1"
#fastrand = "1.5.0"
darwin-rs = {path = "../../../darwin-rs"}

[profile.release]
lto = true